ARM: multi_v7_defconfig: Enable Raspberry Pi OTP driver
Enable the Raspberry Pi OTP driver, which could be helpful for
custom Compute Module 3 designs.

Signed-off-by: Stefan Wahren <stefan.wahren@i2se.com>

--- a/arch/arm/configs/multi_v7_defconfig
+++ b/arch/arm/configs/multi_v7_defconfig
@@ -964,6 +964,7 @@ CONFIG_NVMEM_IMX_OCOTP=y
 CONFIG_NVMEM_SUNXI_SID=y
 CONFIG_NVMEM_VF610_OCOTP=y
 CONFIG_RASPBERRYPI_FIRMWARE=y
+CONFIG_NVMEM_RASPBERRYPI_OTP=y
 CONFIG_BCM47XX_NVRAM=y
 CONFIG_BCM47XX_SPROM=y
 CONFIG_EFI_VARS=m
